Bug 128940 - Bad layout of Remote Files / Add Service button on macOS
Summary: Bad layout of Remote Files / Add Service button on macOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2019-11-21 23:13 UTC by Thorsten Wagner
Modified: 2021-10-19 06:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 1 from current master (32.45 KB, image/png)
2019-11-21 23:13 UTC, Thorsten Wagner
Details
Screenshot 2 from LO 5.4 (28.12 KB, image/png)
2019-11-21 23:14 UTC, Thorsten Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2019-11-21 23:13:03 UTC
Description:
Layout of Remote Files / Add Service button has changed. Old layout was more compliant to macOS UI design. New Layout has only very tiny drop down arrow. Another button layout is rendered within while moving mouse over.

Steps to Reproduce:
1. Open LO Startcenter
2. Select Remote Files
3. Move mouse over Add Service button

Actual Results:
Actual layout has only very tiny drop down arrow. Another button layout is rendered within while moving mouse over (see Screenshot 1 from current master attached).

Expected Results:
Restore previous layout (see Screenshut 2 form LO 5.4 attached).


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Thorsten Wagner 2019-11-21 23:13:45 UTC
Created attachment 156013 [details]
Screenshot 1 from current master
Comment 2 Thorsten Wagner 2019-11-21 23:14:11 UTC
Created attachment 156014 [details]
Screenshot 2 from LO 5.4
Comment 3 Thorsten Wagner 2019-11-21 23:15:00 UTC
Screenshot 1 was taken from current revision of master

Version: 6.5.0.0.alpha0+
Build ID: d312d02cf43928361be34207a0cdd2d95b3ec5fd
CPU threads: 12; OS: Mac OS X 10.14.6; UI render: GL; VCL: osx; 
Locale: de-DE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Roman Kuznetsov 2019-11-22 19:04:29 UTC
confirm in

Version: 6.5.0.0.alpha0+
Build ID: d04eef858250f97690f32dba17f42d157a8767fc
CPU threads: 4; OS: Mac OS X 10.15.1; UI render: default; VCL: osx; 
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

Caolan, may be you'll can look at it?
Comment 5 Caolán McNamara 2019-11-22 21:01:40 UTC
This was the one and only MenuButton used in 472 dialog has its own little non-standard dual-mode behavior, the idea was to use a toolbar which "naturally" supported the kind of split concept. I presume the color and background color widgets in e.g. the writer toolbar have a drop down arrow area of equal size ?

Maybe the easiest thing here would be to make it a normal MenuButton in the first place rather than some dual-mode thing.
Comment 6 Commit Notification 2019-11-24 17:15:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b004a1bd7bf3885613d52aba70dea79766eae639

Resolves: tdf#128940 use a normal MenuButton

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-11-24 19:24:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/7def3650fae374d06f28fe466cbc150567ea511f

Resolves: tdf#128940 use a normal MenuButton

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2019-11-24 20:11:40 UTC
If we hate this too, another option is a simple add button and a separate gear button for the menu