Resolves: tdf#128940 use a normal MenuButton

instead of a split toolbar item

Change-Id: I2e706d1a3255dca7a51d323a2bcf750f28b8fd1e